# chaos-ray-tracing-course-2025

./: .gitmodules  CMakeLists.txt  Makefile  README.md  make.bat
scenes/08-01-light/: scene3.crtscene
scenes/09-03-reflective/: scene5.crtscene
scenes/11-01-refractive/: scene0.crtscene  scene1.crtscene  scene2.crtscene  scene3.crtscene  scene4.crtscene  scene5.crtscene  scene6.crtscene  scene7.crtscene  scene8.crtscene
scenes/12-01-textures/: scene0.crtscene  scene1.crtscene  scene2.crtscene  scene3.crtscene  scene4.crtscene
scenes/13-01-optimizations/: scene0-with-textures.crtscene
scenes/14-01-acceleration-tree/: scene0-with-textures.crtscene  scene0.crtscene  scene1-with-textures.crtscene  scene1.crtscene
scenes/15-01-conclusion/: scene0.crtscene  scene1.crtscene  scene2.crtscene
src/: README.md  crt_aabb.h  crt_acceleration_tree.cpp  crt_acceleration_tree.h  crt_camera.cpp  crt_camera.h  crt_debug.cpp  crt_debug.h  crt_image.cpp  crt_image.h  crt_image_ppm.cpp  crt_image_ppm.h  crt_image_stbi.cpp  crt_intersection.cpp  crt_intersection.h  crt_json.cpp  crt_json.h  crt_material.h  crt_matrix.cpp  crt_matrix.h  crt_mesh.cpp  crt_mesh.h  crt_random.h  crt_ray.h  crt_renderer.cpp  crt_renderer.h  crt_scene.h  crt_texture.cpp  crt_texture.h  crt_transform.h  crt_triangle.h  crt_vector.cpp  crt_vector.h  crt_vertex.h  main.cpp  model_teapot.h
src/blender/: __init__.py  bl_crt_engine.py  bl_crt_json.py  bl_crt_ops.py  bl_crt_properties.py  bl_crt_ui.py  blender_manifest.toml
src/core/: crt_aabb.h  crt_acceleration_tree.cpp  crt_acceleration_tree.h  crt_camera.h  crt_image_ppm.cpp  crt_image_stbi.cpp  crt_image_stbi.h  crt_intersection.h  crt_json.cpp  crt_json.h  crt_light.h  crt_material.h  crt_matrix.cpp  crt_matrix.h  crt_mesh.h  crt_random.h  crt_ray.h  crt_renderer.cpp  crt_renderer.h  crt_texture.cpp  crt_transform.h  crt_vector.cpp
src/python/: py_crt_module.cpp
src/standalone/: main.cpp
tools/: blender_crt_export.py  blender_crt_tools_addon.py  submit_render_task.sh
